--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@monaco-editor/react": "^4.6.0",
+    "axios": "^1.7.8",
     "date-fns": "^3.3.1",
     "firebase": "^10.8.0",
     "framer-motion": "^11.0.8",
@@ -20,7 +21,7 @@
     "react-dropzone": "^14.2.3",
     "react-markdown": "^9.0.1",
     "react-pdf": "^9.1.1",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.28.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
