--- a/package.json
+++ b/package.json
@@ -10,21 +10,34 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@monaco-editor/react": "^4.6.0",
-    "axios": "^1.7.8",
+    "@mui/material": "^6.3.0",
+    "axios": "^1.7.9",
     "date-fns": "^3.3.1",
+    "dotenv": "^16.4.7",
+    "emailjs": "^4.0.3",
+    "express": "^4.21.2",
     "firebase": "^10.8.0",
+    "formidable": "^3.5.2",
     "framer-motion": "^11.0.8",
     "lucide-react": "^0.344.0",
+    "multer": "^1.4.5-lts.1",
+    "next": "^15.1.2",
+    "nodemailer": "^6.9.16",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
     "react-markdown": "^9.0.1",
     "react-pdf": "^9.1.1",
-    "react-router-dom": "^6.28.0"
+    "react-router-dom": "^6.28.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
+    "@types/formidable": "^3.4.5",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
