Refactor project structure and update dependencies; remove netlify.toml, add EmailJS integration, and enhance UI components. Update version to 0.1.0 and improve routing in App component.

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-EMAIL_USER= 'gurukishore.g7@gmail.com'
-EMAIL_PASSWORD= 'gmail app password'
+REACT_APP_EMAILJS_SERVICE_ID=your_service_id
+REACT_APP_EMAILJS_TEMPLATE_ID=your_template_id
+REACT_APP_EMAILJS_PUBLIC_KEY=your_public_key
