--- a/package.json
+++ b/package.json
@@ -1,55 +1,61 @@
 {
   "name": "patron-job-portal",
+  "version": "0.1.0",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
   "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
-    "@monaco-editor/react": "^4.6.0",
-    "@mui/material": "^6.3.0",
-    "axios": "^1.7.9",
-    "date-fns": "^3.3.1",
-    "dotenv": "^16.4.7",
-    "emailjs": "^4.0.3",
-    "express": "^4.21.2",
-    "firebase": "^10.8.0",
+    "@emailjs/browser": "^4.4.1",
+    "@react-pdf/renderer": "^4.1.6",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/formidable": "^3.4.5",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.18.89",
+    "@types/react": "^18.2.66",
+    "@types/react-dom": "^18.2.22",
+    "axios": "^1.6.8",
+    "date-fns": "^3.5.0",
+    "emailjs-com": "^3.2.0",
+    "firebase": "^10.9.0",
     "formidable": "^3.5.2",
-    "framer-motion": "^11.0.8",
+    "framer-motion": "^11.0.14",
     "lucide-react": "^0.344.0",
-    "multer": "^1.4.5-lts.1",
-    "next": "^15.1.2",
-    "nodemailer": "^6.9.16",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
-    "react-markdown": "^9.0.1",
-    "react-pdf": "^9.1.1",
-    "react-router-dom": "^6.28.0",
+    "react-router-dom": "^6.22.3",
+    "react-scripts": "5.0.1",
+    "typescript": "^4.9.5",
+    "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
   },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
   "devDependencies": {
-    "@eslint/js": "^9.9.1",
-    "@types/formidable": "^3.4.5",
-    "@types/nodemailer": "^6.4.17",
-    "@types/react": "^18.3.5",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.18",
-    "eslint": "^9.9.1",
-    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
-    "eslint-plugin-react-refresh": "^0.4.11",
-    "globals": "^15.9.0",
     "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.7.2",
-    "typescript-eslint": "^8.3.0",
-    "vite": "^5.4.11"
+    "tailwindcss": "^3.4.1"
   }
 }
